--- a/template/www/index.html
+++ b/template/www/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <title>{{name label="Slideshow name"}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, shrink-to-fit=no"/>
-    <style type="text/css">#bodyContainer{height:100vh;padding:none;margin:none;}#fadeContainer{height:100vh;padding:none;margin:none;}.slide{height:100vh;width:100vh;padding:1.5rem;color:rgba(255,255,255,0.4);}@media (min-width:768px){.slideText{width:33.33vw;color:rgba(255,255,255,0.6);}}</style>
+    <link href="https://fonts.googleapis.com/css2?family={{font type=choice input=dropdown label="Font" options="Karla,Inconsolata,Jost,Dosis,Barlow,Bitter,DM Serif Text"}}:wght@400;700&display=swap" rel="stylesheet" type="text/css"/>
+    <style type="text/css">body{padding:none;margin:none;}body,p{font-family:"{{font}}",sans-serif;}#bodyContainer{height:100vh;padding:none;margin:none;}#fadeContainer{height:100vh;padding:none;margin:none;}.slide{height:100vh;width:100vh;padding:1.5rem;color:rgba(255,255,255,0.4);}@media (min-width:768px){.slideText{width:33.33vw;color:rgba(255,255,255,0.6);}}</style>
   </head>
   <body id="bodyContainer">
     <div id="fadeContainer">
