--- a/template/www/index.html
+++ b/template/www/index.html
@@ -6,7 +6,7 @@
     <title>{{title label="Slideshow title"}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, shrink-to-fit=no"/>
     <link href="https://fonts.googleapis.com/css2?family={{font type=choice input=dropdown label="Font" options="Karla,Inconsolata,Jost,Dosis,Barlow,Bitter,DM Serif Text"}}:wght@400;700&display=swap" rel="stylesheet" type="text/css"/>
-    <style type="text/css">body{padding:none;margin:none;}body,p{font-family:"{{font}}",sans-serif;font-size:15pt;}h2{font-size:26pt;}#bodyContainer{height:100vh;padding:none;margin:none;}#fadeContainer{height:100vh;padding:none;margin:none;}.slideImg{display:none;}.slide{height:100vh;width:100vh;padding:1.5rem;color:rgba(255,255,255,0.4);}@media (min-width:768px){.slideText{width:33.33vw;color:rgba(255,255,255,0.6);}}</style>
+    <style type="text/css">body{padding:none;margin:none;}body,p{font-family:"{{font}}",sans-serif;font-size:15pt;}h2{font-size:26pt;}#bodyContainer{height:100vh;padding:none;margin:none;}#fadeContainer{height:100vh;padding:none;margin:none;}.slideImg{display:none;}.slide{min-height:100vh;width:100vh;padding:1.5rem;color:rgba(255,255,255,0.4);}@media (min-width:768px){.slideText{width:33.33vw;color:rgba(255,255,255,0.6);}}</style>
   </head>
   <body id="bodyContainer">
     <div id="fadeContainer">
@@ -20,8 +20,14 @@
     var fadeContainer = document.getElementById("fadeContainer");
     var slides = document.getElementsByClassName("slide");
     var slideImgs = document.getElementsByClassName("slideImg");
-    bodyContainer.onload() = function() {}
-    bodyContainer.onscroll = function() {}
+    function showSlideImg() {
+      for(var i; i < slides.length; i++) {
+        if((slides[i].getBoundingClientRect()).bottom <= (window.innerWidth || document.documentElement.clientWidth)) {
+        }
+      }
+    }
+    bodyContainer.onload = showSlideImg;
+    bodyContainer.onscroll = showSlideImg;
     </script>
   </body>
 </html>
